--- a/public/components/home/home.html
+++ b/public/components/home/home.html
@@ -55,9 +55,9 @@
                         </div>
                         <div class="modal-footer">
 
-                            <a class="waves-effect waves-green btn-flat" ng-click="adding = !adding" ng-hide='adding'>Add to My List</a>
+                            <button class="waves-effect waves-green btn-flat" ng-click="adding = !adding" ng-hide='adding' ng-show='auth.isAuthenticated()'>Add to My List</button>
 
-                            <a ng-show='adding' href="#!" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click='addBook(title.volumeInfo, data)' message="Added!" duration="1000" toast='click'>Add</a>
+                            <button ng-show='adding' href="#!" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click='addBook(title.volumeInfo, data)' message="Added!" duration="1000" toast='click' >Add</button>
                         </div>
 
                     </div>
