--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -1,18 +1,31 @@
 <div class="navbar-fixed cyan">
-        <nav class='blue'>
-            <div class="nav-wrapper">
-                <a href="#/home" class="brand-logo left">Home</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                   
-                    <li ng-show='auth.isAuthenticated()'><a href="#/mylist">My List</a></li>
-                    <li ng-show='auth.isAuthenticated()'><a href="#/myprofile">My Profile</a></li>
-                    <li ng-hide='true'><a href="">Admin</a></li>
-                    <li ng-hide='auth.isAuthenticated()'><a href="#/login">Login</a></li>
-                    <li ng-hide='auth.isAuthenticated()'><a href="#/signup">Sign Up</a></li>
-                    <li ng-show='auth.isAuthenticated()'><a href="#/logout">Logout</a></li>
+    <nav class='blue'>
+        <div class="nav-wrapper">
+            <a href="#/home" class="brand-logo left">Home</a>
+            <a href="#" data-activates="dropdown-menu" class="button-collapse right" dropdown ><i class="material-icons">menu</i></a>
 
-                </ul>
-            </div>
+            <ul id="nav-mobile" id="dropdown-menu" class="right hide-on-med-and-down">
 
-        </nav>
-    </div>
+                <li ng-show='auth.isAuthenticated()'><a href="#/mylist">My List</a></li>
+<!--                <li ng-show='auth.isAuthenticated()'><a href="#/myprofile">My Profile</a></li>-->
+<!--                <li ng-hide='true'><a href="">Admin</a></li>-->
+                <li ng-hide='auth.isAuthenticated()'><a href="#/login">Login</a></li>
+                <li ng-hide='auth.isAuthenticated()'><a href="#/signup">Sign Up</a></li>
+                <li ng-show='auth.isAuthenticated()'><a href="#/logout">Logout</a></li>
+
+            </ul>
+            <ul class="dropdown-content" id="dropdown-menu">
+
+                <li ng-show='auth.isAuthenticated()'><a href="#/mylist">My List</a></li>
+                <li ng-show='auth.isAuthenticated()'><a href="#/myprofile">My Profile</a></li>
+                <li ng-hide='true'><a href="">Admin</a></li>
+                <li ng-hide='auth.isAuthenticated()'><a href="#/login">Login</a></li>
+                <li ng-hide='auth.isAuthenticated()'><a href="#/signup">Sign Up</a></li>
+                <li ng-show='auth.isAuthenticated()'><a href="#/logout">Logout</a></li>
+
+            </ul>
+       
+        </div>
+
+    </nav>
+</div>
